--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-tqdm
-numpy
-einops
-bokeh
-jax
-tornado
-matplotlib
+tqdm~=4.62.3
+numpy~=1.22.3
+einops~=0.3.2
+bokeh~=2.4.1
+jax~=0.2.24
+tornado~=6.1
+matplotlib~=3.4.3
 trio-websocket
-pynng
-trio
-optax
-uvicorn
-fastapi
-pydantic
-torch
-ray
+pynng~=0.7.1
+trio~=0.19.0
+optax~=0.0.9
+uvicorn~=0.15.0
+fastapi~=0.70.0
+pydantic~=1.8.2
+torch~=1.10.0
+ray~=1.8.0
+
+polars~=0.13.55
+catboost~=1.0.6
